[package]
name = "hhas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.6.0"
teloxide = { version = "0.11.0", features = ["macros", "auto-send"] }
tokio = { version = "1.21.2", features = [
    "rt-multi-thread",
    "macros",
    "process",
    "io-util",
] }
tokio-util = "0.7.4"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = [
    "std",
    "env-filter",
    "fmt",
] }
